flo fix profile

--- a/src/FamilyBundle/Resources/views/Default/phone.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/phone.html.twig
@@ -29,9 +29,9 @@
             <tr>
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
-                <td>{{ user.tel03 }}</td>
-                <td>{{ user.tel06 }}</td>
-                <td>{{ user.tel09 }}</td>
+                <td>{{ user.domicile }}</td>
+                <td>{{ user.portable }}</td>
+                <td>{{ user.box }}</td>
             </tr>
         {% endfor %}
         </tbody>
