--- a/src/FamilyBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Profile/show_content.html.twig
@@ -15,9 +15,9 @@
 
     <p>{{ 'Nom' }}: {{ user.nom }}</p>
     <p>{{ 'Prenom' }}: {{ user.prenom }}</p>
-    <p>{{ 'Tel Domicile' }}: {{ user.tel03 }}</p>
-    <p>{{ 'Tel Portable' }}: {{ user.tel06 }}</p>
-    <p>{{ 'Tel Internet' }}: {{ user.tel09 }}</p>
+    <p>{{ 'Tel Domicile' }}: {{ user.domicile }}</p>
+    <p>{{ 'Tel Portable' }}: {{ user.portable }}</p>
+    <p>{{ 'Tel Internet' }}: {{ user.box }}</p>
     <p>{{ 'Adresse' }}: {{ user.adresse }}</p>
     <p>{{ 'Code Postal' }}: {{ user.codepostal }}</p>
     <p>{{ 'Ville' }}: {{ user.ville }}</p>
