--- a/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
@@ -52,19 +52,19 @@
     </div>
 
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
-        {{ form_label(form.tel_03) }}
-        {{ form_errors(form.tel_03) }}
-        {{ form_widget(form.tel_03) }}
+        {{ form_label(form.domicile) }}
+        {{ form_errors(form.domicile) }}
+        {{ form_widget(form.domicile) }}
     </div>
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
-        {{ form_label(form.tel_06) }}
-        {{ form_errors(form.tel_06) }}
-        {{ form_widget(form.tel_06) }}
+        {{ form_label(form.portable) }}
+        {{ form_errors(form.portable) }}
+        {{ form_widget(form.portable) }}
     </div>
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
-        {{ form_label(form.tel_09) }}
-        {{ form_errors(form.tel_09) }}
-        {{ form_widget(form.tel_09) }}
+        {{ form_label(form.box) }}
+        {{ form_errors(form.box) }}
+        {{ form_widget(form.box) }}
     </div>
 
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">today</i>
