--- a/src/FamilyBundle/Resources/views/Profile/edit.html.twig
+++ b/src/FamilyBundle/Resources/views/Profile/edit.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         {% block fos_user_content %}
-            {% include "FOSUserBundle:Profile:edit_content.html.twig" %}
+            {% include "FamilyBundle:Profile:edit_content.html.twig" %}
         {% endblock fos_user_content %}
     </div>
 {% endblock %}
