--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -7,6 +7,17 @@
 ---------------------*/
 html, body { height: 100%; margin: 0; padding: 0; }
 #map { height: 25%; }
+#save-widget {
+    width: 300px;
+    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
+    background-color: white;
+    padding: 10px;
+    font-family: Roboto, Arial;
+    font-size: 13px;
+    margin: 15px;
+}
+
+
 
 
 footer{
