--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,6 +32,10 @@
     <!-- Compiled and minified JavaScript offline Materialize -->
 
     <script type="text/javascript" src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
+
+    {#<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>#}
+    {#<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>#}
+
     {% block js %}
     <script type="text/javascript" src="{{ asset('bundles/family/js/main.js') }}"></script>
     {% endblock %}
