--- a/src/FamilyBundle/Resources/views/Calendar/agenda-views.html.twig
+++ b/src/FamilyBundle/Resources/views/Calendar/agenda-views.html.twig
@@ -25,7 +25,8 @@
 	<link type="text/javascript" href="{{ asset('bundles/family/js/moment.min.js') }}">
 	<link type="text/javascript" href="{{ asset('bundles/family/js/fullcalendar.min.js') }}">
 	{#<link type="text/javascript" href="{{ asset('bundles/family/js/calendar_main.js') }}">#}
-
+	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+	<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 {% endblock %}
 {% endblock %}
 
