--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,7 @@
 {% block stylesheet%}
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
 
-    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
+    {#<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">#}
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
 {% endblock %}
 
@@ -14,9 +14,44 @@
 {% include "@Family/Default/nav.html.twig"  %}
 
 {#<div class="join_view ng-scope"><br>#}
-<h3 class="center-align">Family App :</h3><br>
-<h3 class="center-align">4 Fonctions pour organiser sa famille.</h3><br>
 
+
+<div class="container">
+    <div class="row">
+
+    <div class="slider offset-s1 col s10 offset-s1  ">
+        <ul class="slides">
+            <li>
+                <img src="http://lorempixel.com/580/250/nature/1"> <!-- random image -->
+                <div class="caption center-align">
+                    <h3>The Family App :</h3>
+                    <h5 class="light grey-text text-lighten-3">Démarrer avec</h5>
+                </div>
+            </li>
+            <li>
+                <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+                <div class="caption left-align">
+                    <h3>4 Fonctions</h3>
+                    <h5 class="light grey-text text-lighten-3">pour organiser sa famille.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
+                <div class="caption right-align">
+                    <h3>car partout où je vais </h3>
+                    <h5 class="light grey-text text-lighten-3">ma famille est ma force</h5>
+                </div>
+            </li>
+            <li>
+                <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
+                <div class="caption center-align">
+                    <h3>alors n'attendez plus</h3>
+                    <h5 class="light grey-text text-lighten-3">commencer maintenant !</h5>
+                </div>
+            </li>
+        </ul>
+    </div>
+    </div></div>
         {#<div class="container center-align"><br><br>#}
             {#<div class="row">#}
                 {#<div class="col s6">#}
@@ -36,23 +71,18 @@
             {#</div>#}
         {#</div>#}
 
-    <div class="container center-align col s12 m12 l12">
+    <div class="row center-align col s12 m12 l12">
 
-        <div class="card-panel ">
+        <ul class="collapsible" data-collapsible="expandable">
+            <li>
+                <div class="collapsible-header"><img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone">Phone listings :</div>
+                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p><a href="{{ path('family_phone') }}">This is a link</a></div>
+            </li>
 
-            <img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone">
-            <span class="card-title">Phone listings :</span>
+        </ul>
 
-            <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-            </div>
-        </div>
 
-        <div class="card-panel ">
+        <div class="panel ">
 
             <img src="{{ asset('bundles/family/images/calendar.png') }}" class="imgmenu" alt="calendar">
             <span class="card-title">Calendar Events :</span>
@@ -66,7 +96,7 @@
             </div>
         </div>
 
-        <div class="card-panel ">
+        <div class="panel ">
 
             <img src="{{ asset('bundles/family/images/time.png') }}" class="imgmenu" alt="time">
             <span class="card-title">CountDown Listings :</span>
@@ -80,7 +110,7 @@
             </div>
         </div>
 
-        <div class="card-panel ">
+        <div class="panel ">
 
             <img src="{{ asset('bundles/family/images/map.png') }}" class="imgmenu" alt="map">
             <span class="card-title">Maps Events :</span>
@@ -93,6 +123,7 @@
                 <a href="#">This is a link</a>
             </div>
         </div>
+
 
     </div>
 
