--- a/src/FamilyBundle/Resources/views/Default/time.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/time.html.twig
@@ -3,24 +3,24 @@
 {% block stylesheet%}
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
 
-    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">
+    {#<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/style.css') }}">#}
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
 {% endblock %}
 
 
 {% block body %}
-    {% include "@Family/Default/nav.html.twig"  %}
 
+<div class="row col s12 m6 l6 center">
+        {% include "@Family/Default/nav.html.twig"  %}
     <h1>Countdown Listings :</h1>
 
-    <table class="bordered highlight responsive-table centered">
+    <table class="col s12 m6 l6 offset-l3 bordered highlight responsive-table centered">
         <thead>
         <tr>
             <th data-field="id">Nom</th>
             <th data-field="name">Prenom</th>
             <th data-field="price">Anniversaire</th>
             <th data-field="price">Reste nb de jrs</th>
-
         </tr>
         </thead>
 
@@ -31,11 +31,11 @@
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.anniversaire_string }}</td>
                 <td>{{ user.countdown }}</td>
-
             </tr>
         {% endfor %}
         </tbody>
     </table>
     {% include "@Family/Default/footer.html.twig"  %}
+    </div>
 {% endblock %}
 
