--- a/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
@@ -67,7 +67,7 @@
         {{ form_widget(form.box) }}
     </div>
 
-    <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">today</i>
+    <div class="datepicker row col s12 m4 l4 input-field "><i class="material-icons prefix">today</i>
         {#<input type="date" class="datepicker">#}
         {{ form_label(form.anniversaire) }}
         {{ form_errors(form.anniversaire) }}
@@ -78,34 +78,17 @@
         {#<input type="date" class="datepicker">#}
     {#</div>#}
 
-    {#<div class="input-field col s12">#}
-        {#<select>#}
-            {#<option value="" disabled selected>Menu</option>#}
-            {#<option value="1">Accueil</option>#}
-            {#<option value="2">Profil</option>#}
-            {#<option value="3">Deconection</option>#}
-        {#</select>#}
-        {#</label>#}
-    {#</div>#}
-    {#<div class="input-field col s12">#}
-        {#<select>#}
-            {#<option value="" disabled selected>Choose your option</option>#}
-            {#<option value="1">Option 1</option>#}
-            {#<option value="2">Option 2</option>#}
-            {#<option value="3">Option 3</option>#}
-        {#</select>#}
-        {#<label>Materialize Select</label>#}
-    {#</div>#}
-{#<br>#}
-    {#<!-- Switch -->#}
-    {#<div class="switch">#}
-        {#<label>#}
-            {#Login#}
-            {#<input type="checkbox">#}
-            {#<span class="lever"></span>#}
-            {#Logoff :#}
-        {#</label>#}
-    {#</div>#}
+    <div class="input-field col s12 m4 l4 ">
+
+        <select>
+            <option value="" disabled selected>Statut</option>
+            <option value="1">Parent</option>
+            <option value="2">Enfant</option>
+            <option value="3">Deconection</option>
+        </select>
+
+    </div>
+
 
 </div></div>
 
@@ -126,4 +109,5 @@
         <input class="waves-effect waves-light btn" type="submit" value="{{ 'registration.submit'|trans }}" />
 </div>
         {{ form_end(form) }}
+<br>
 
