--- a/src/FamilyBundle/Resources/views/Security/login_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login_content.html.twig
@@ -29,7 +29,7 @@
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <label for="username" >{{ 'security.login.username'|trans }}</label>
-                    <input type="text"  length="15" id="username" name="_username" value="{{ last_username }}" required="required" />
+                    <input type="text"  length="15" maxlength="15" id="username" name="_username" value="{{ last_username }}" required="required" />
                 </div>
 
             {#</div>#}
@@ -38,7 +38,7 @@
                 <div class="input-field">
                     <i class="material-icons prefix">lock</i>
                     <label for="password">{{ 'security.login.password'|trans }}</label>
-                    <input type="password" length="15" id="password" name="_password" required="required" />
+                    <input type="password" length="15" maxlength="15" id="password" name="_password" required="required" />
                 </div>
 
             </div>
