--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -1,38 +1,19 @@
-/*----- INDEX  ------
-//
-// 1. A Link
-// 2. Images
-// 3. Nav
-// 4. Responsive
----------------------*/
+/*--- INDEX  ----
+
+01- Html,Body
+02-Nav
+03-GMap
+04-FullCalendar
+05-A link
+06-Images
+07-Responsive
+08-Input
+
+---------------*/
+
+/*1-Html***********************************************************/
+
 html, body { height: 100%; margin: 0; padding: 0; }
-
-#map {
-    height: 35%;
-    width: 55%;
-
-}
-
-#save-widget {
-    width: 300px;
-    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
-    background-color: white;
-    padding: 10px;
-    font-family: Roboto, Arial;
-    font-size: 13px;
-    margin: 15px;
-}
-
-#calendar {
-    max-width: 400px;
-    margin: 0 auto;
-}
-
-/*body {*/
-    /*background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/72900/blueleaf.jpg')!important;*/
-    /*background-attachment: fixed!important;*/
-    /*background-size: cover!important;*/
-/*}*/
 
 body {
     color: blue !important;
@@ -58,20 +39,59 @@ footer{
     background-position: center top;
     background-repeat: repeat-y;
 }
-/************************************
-*                                   *
-*            1. A link              *
-*                                   *
-************************************/
 
 .collapsible-header{
-    overflow: hidden;
+    /*overflow: hidden;*/
     width: auto;
     background-color: #BFBFBB;
     background-image: url("../images/bord.gif") !important;
     background-position: center top;
     background-repeat: repeat-y;
+    box-shadow: none !important;
 }
+
+/*2-Nav***********************************************************/
+
+nav {
+    background-color: #BFBFBB;
+    background-image: url("../images/bord.gif") !important;
+    background-position: center top;
+    background-repeat: repeat-y;
+    box-shadow: none !important;
+}
+
+.nav_bar_logo, .nav_bar_burger{
+    height: 100%;
+
+}
+.nav_bar_logo img, .nav_bar_burger img{
+    height: 100%;
+}
+
+/*3-G Map***********************************************************/
+
+#map {
+    height: 35%;
+    width: 55%;
+}
+
+#save-widget {
+    width: 300px;
+    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
+    background-color: white;
+    padding: 10px;
+    font-family: Roboto, Arial;
+    font-size: 13px;
+    margin: 15px;
+}
+
+/*4-FullCalendar*****************************************************/
+#calendar {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+/*5-A Link***********************************************************/
 
 /* unvisited link */
 a:link {
@@ -98,65 +118,17 @@ a:active {
     color: purple !important;
 }
 
-
-/************************************
-*                                   *
-*            2. IMAGE               *
-*                                   *
-************************************/
+/*6-Image***********************************************************/
 
 .imgmenu
 {
     width: 60px;
     height: 60px;
 }
-/*.background-image {*/
-    /*margin:0;*/
-    /*padding: 0;*/
-
-    /*background: url() no-repeat center center fixed;*/
-    /*-webkit-background-size: cover;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
-    /*position: fixed;*/
-    /*top:0;*/
-    /*left:0;*/
-    /*z-index:-10;*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-
-/*}*/
 
 
-/************************************
-*                                   *
-*            3. NAV                 *
-*                                   *
-************************************/
-nav {
-    background-color: #BFBFBB;
-    background-image: url("../images/bord.gif") !important;
-    background-position: center top;
-    background-repeat: repeat-y;
-    box-shadow: none !important;
+/*7-Responsive*******************************************************/
 
-}
-
-
-.nav_bar_logo, .nav_bar_burger{
-    height: 100%;
-
-}
-.nav_bar_logo img, .nav_bar_burger img{
-    height: 100%;
-}
-
-/************************************
-*                                   *
-*            4. Responsive          *
-*                                   *
-************************************/
 
 /* Vue responsive */
 @media screen and (max-width: 992px) {
@@ -174,10 +146,7 @@ nav {
 
 }
 
-
-/*.wall {*/
-    /*background-image: url("../images/userl.png") !important;*/
-
+/*8-Input***********************************************************/
 
 .input-field label {
     color: #0080FF !important;
