--- a/src/FamilyBundle/Resources/views/Profile/show.html.twig
+++ b/src/FamilyBundle/Resources/views/Profile/show.html.twig
@@ -5,5 +5,12 @@
 {% block fos_user_content %}
 {% include "FOSUserBundle:Profile:show_content.html.twig" %}
 {% endblock fos_user_content %}
+
+{% endblock %}
+{% block stylesheet %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
     </div>
+    <!--Ajout du lien interne vers le Footer-->
+    {% include "@Family/Default/footer.html.twig"  %}
 {% endblock %}
