--- a/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
@@ -3,7 +3,7 @@
     <img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo">
 </div>
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-<div class="container ">
+<div class="container">
 <div class="row ">
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">email</i>
         {{ form_label(form.email) }}
@@ -54,40 +54,36 @@
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
         {{ form_label(form.domicile) }}
         {{ form_errors(form.domicile) }}
-        {{ form_widget(form.domicile) }}
+        {{ form_widget(form.domicile, { 'attr': {'length': '10', 'maxlength': '10'} }) }}
     </div>
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
         {{ form_label(form.portable) }}
         {{ form_errors(form.portable) }}
-        {{ form_widget(form.portable) }}
+        {{ form_widget(form.portable, { 'attr': {'length': '10'} }) }}
     </div>
     <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
         {{ form_label(form.box) }}
         {{ form_errors(form.box) }}
-        {{ form_widget(form.box) }}
+        {{ form_widget(form.box, { 'attr': {'length': '10'} }) }}
     </div>
 
-    <div class="datepicker row col s12 m4 l4 input-field "><i class="material-icons prefix">today</i>
-        {#<input type="date" class="datepicker">#}
+    <div class="row col s12 m4 l4 input-field">
+        {#<i class="material-icons prefix">today</i>#}
         {{ form_label(form.anniversaire) }}
-        {{ form_errors(form.anniversaire) }}
+        {#{{ form_errors(form.anniversaire) }}#}
         {{ form_widget(form.anniversaire) }}
     </div>
 
-    {#<div class="row col s12 m4 l4"><i class="material-icons prefix">today</i>Anniversaire#}
-        {#<input type="date" class="datepicker">#}
+    {#<div class="input-field col s12 m4 l4 ">#}
+
+        {#<select>#}
+            {#<option value="" disabled selected>Statut</option>#}
+            {#<option value="1">Parent</option>#}
+            {#<option value="2">Enfant</option>#}
+            {#<option value="3">Deconection</option>#}
+        {#</select>#}
+
     {#</div>#}
-
-    <div class="input-field col s12 m4 l4 ">
-
-        <select>
-            <option value="" disabled selected>Statut</option>
-            <option value="1">Parent</option>
-            <option value="2">Enfant</option>
-            <option value="3">Deconection</option>
-        </select>
-
-    </div>
 
 
 </div></div>
@@ -104,8 +100,7 @@
     {#</div>#}
 {#</form>#}
 
-        {{ form_widget(form) }}
-<div class="row center-align">
+<div class="row center-align col s5 m3 l3">
         <input class="waves-effect waves-light btn" type="submit" value="{{ 'registration.submit'|trans }}" />
 </div>
         {{ form_end(form) }}
