--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -13,13 +13,15 @@
 <!--Ajout du lien interne vers la NavBar-->
 {% include "@Family/Default/nav.html.twig"  %}
 
-{#<div class="join_view ng-scope"><br>#}
+{#<div class="join_view ng-scope container row center-align col s12 m12 l12"><br>#}
 
 
 <div class="container">
     <div class="row">
 
     <div class="slider offset-s1 col s10 offset-s1  ">
+
+
         <ul class="slides">
             <li>
                 <img src="http://lorempixel.com/580/250/nature/1"> <!-- random image -->
@@ -73,58 +75,38 @@
 
     <div class="row center-align col s12 m12 l12">
 
-        <ul class="collapsible" data-collapsible="expandable">
-            <li>
-                <div class="collapsible-header"><img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone">Phone listings :</div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p><a href="{{ path('family_phone') }}">This is a link</a></div>
-            </li>
-
-        </ul>
 
 
-        <div class="panel ">
+        <div class="col s6 m6 l4 offset-l2 center">
+            <img src="{{ asset('bundles/family/images/phone.png') }}" class="imgmenu" alt="phone"><br>
+            <span class="card-title">Listing Phones :</span>
+            <p>Listing des numeros de telephone.</p>
 
-            <img src="{{ asset('bundles/family/images/calendar.png') }}" class="imgmenu" alt="calendar">
+        </div>
+        <div class="col s6 m6 l4 ">
+            <img src="{{ asset('bundles/family/images/calendar.png') }}" class="imgmenu" alt="calendar"><br>
             <span class="card-title">Calendar Events :</span>
+                <p>Calendrier des fêtes et évènements.</p>
 
-            <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-            </div>
         </div>
 
-        <div class="panel ">
-
-            <img src="{{ asset('bundles/family/images/time.png') }}" class="imgmenu" alt="time">
+        <div class="col s6 m6 l4 offset-l2 center">
+            <img src="{{ asset('bundles/family/images/time.png') }}" class="imgmenu" alt="time"><br>
             <span class="card-title">CountDown Listings :</span>
+                <p>Listing des anniversaires <br> et decomptes des jours restants .</p>
 
-            <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-            </div>
         </div>
 
-        <div class="panel ">
-
-            <img src="{{ asset('bundles/family/images/map.png') }}" class="imgmenu" alt="map">
+        <div class="col s6 m6 l4">
+            <img src="{{ asset('bundles/family/images/map.png') }}" class="imgmenu" alt="map"><br>
             <span class="card-title">Maps Events :</span>
+                <p>Listing des maps.</p>
 
-            <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-            </div>
         </div>
 
-
+        <div class="col s12 m12 l12">
+        <img src="{{ asset('bundles/family/images/andy.jpg') }}" class="imgindex" alt="andro">
+        </div>
     </div>
 
 {#</div>#}
