--- a/src/FamilyBundle/Resources/views/Default/nav.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/nav.html.twig
@@ -26,7 +26,25 @@
                     <a href="{{ path('fos_user_profile_show') }}"><img src="{{ asset('bundles/family/images/profile.png') }}" class="brand-logo nav_bar_logo" alt="Profile" title="profile"></a>
                 </div>
 
+                {#<div class="col s1 ">#}
+
+                    {#<ul class="collapsible collapsible-accordion">#}
+                        {#<li>#}
+                            {#<a class="collapsible-header material-icons o prefix">vert</a>#}
+                            {#<div class="collapsible-body">#}
+                                {#<ul>#}
+                                    {#<li><a href="#!">First</a></li>#}
+                                    {#<li><a href="#!">Second</a></li>#}
+
+                                {#</ul>#}
+                            {#</div>#}
+                        {#</li>#}
+                    {#</ul#}
+                {#</div>#}
             </div>
+
+
+
         </ul>
 
 
