--- a/src/FamilyBundle/Resources/views/Security/login_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login_content.html.twig
@@ -36,7 +36,7 @@
             {#<div class="row col s12 m6 l6">#}
 
                 <div class="input-field">
-                    <i class="material-icons prefix">lock</i>
+                    <i class="material-icons o prefix">lock</i>
                     <label for="password">{{ 'security.login.password'|trans }}</label>
                     <input type="password" length="15" maxlength="15" id="password" name="_password" required="required" />
                 </div>
