--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -7,6 +7,7 @@
             <div class="col s12">
                 <h1>OOOOPSS ! Une érreur a été détectée</h1>
             </div>
+            <img src="{{ asset('bundles/family/images/down.png') }}" class="imgmenu" alt="404">
         </div>
 
         <div class="row">
