--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,11 +4,13 @@
         <meta charset="UTF-8" />
         {#<title>{% block title %}Family App Homepage{% endblock %}</title>#}
         <link rel="icon" type="image/x-icon" href="{{ asset('bundles/family/images/familyicon.ico') }}" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         {% block stylesheet%}
         <!--Import Google Icon Font-->
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        {#<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />#}
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/fonts/roboto/Roboto-Regular.ttf" />
         <!--Import materialize.css-->
         {#<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fingerpaint.min.css') }}">#}
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
@@ -26,10 +28,11 @@
 
 
     <!-- jQuery is required by Materialize to function -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    {#<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>#}
     <!-- Compiled and minified JavaScript offline Materialize -->
-    <script type="text/javascript" src="{{ asset('bundles/family/js/calendar_main.js') }}"></script>
+    {#<script type="text/javascript" src="{{ asset('bundles/family/js/calendar_main.js') }}"></script>#}
     <script type="text/javascript" src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/family/js/fullcalendar.min.js') }}"></script>
 
