--- a/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
@@ -56,15 +56,15 @@
         {{ form_errors(form.domicile) }}
         {{ form_widget(form.domicile, { 'attr': {'length': '10', 'maxlength': '10'} }) }}
     </div>
-    <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
+    <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix ">phone</i>
         {{ form_label(form.portable) }}
         {{ form_errors(form.portable) }}
-        {{ form_widget(form.portable, { 'attr': {'length': '10'} }) }}
+        {{ form_widget(form.portable, { 'attr': {'length': '10', 'maxlength': '10'} }) }}
     </div>
-    <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">phone</i>
+    <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix ">phone</i>
         {{ form_label(form.box) }}
         {{ form_errors(form.box) }}
-        {{ form_widget(form.box, { 'attr': {'length': '10'} }) }}
+        {{ form_widget(form.box, { 'attr': {'length': '10', 'maxlength': '10'} }) }}
     </div>
 
     <div class="row col s12 m4 l4 input-field">
@@ -104,5 +104,4 @@
         <input class="waves-effect waves-light btn" type="submit" value="{{ 'registration.submit'|trans }}" />
 </div>
         {{ form_end(form) }}
-<br>
 
