--- a/src/FamilyBundle/Resources/views/Default/map.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/map.html.twig
@@ -90,9 +90,8 @@ function initMap() {
 
 {% endblock %}
 {% block js %}
-    <script type="text/javascript">
 
-    </script>
+    <script type="text/javascript" src="{{ asset('bundles/family/js/main.js') }}"></script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hklkFjuJH0suuR_ni4Jl7_sPnjHEfPk&callback=initMap">
     </script>
