--- a/src/FamilyBundle/Resources/views/Default/phone.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/phone.html.twig
@@ -13,8 +13,9 @@
     <div class="row col s12 m6 l6 center">
     {% include "@Family/Default/nav.html.twig"  %}
     <h1>Phone Listings :</h1></div>
-        <div class="container"><div class="row">
-    <table class="col s12 m6 l6 offset-l3 bordered highlight centered">
+        <div class="container">
+            <div class="row">
+    <table class="col s12 m12 l6 offset-l3 bordered highlight centered">
         <thead>
         <tr>
             <th data-field="id">Nom</th>
@@ -50,7 +51,8 @@
 
     {#<link rel="stylesheet" href="{{ asset('bundles/family/css/mobbern.css') }}">#}
 {#{% endblock %}#}
-            </div></div>
+            </div>
+        </div>
     <div class="row col s12 m6 l6 center">
     {% include "@Family/Default/footer.html.twig"  %}
       </div>
