--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -5,7 +5,7 @@
     <div class="container amber-text center msg-error ">
         <div class="row">
             <div class="col s12">
-                <h1>OOOOPSS ! Une érreur a été détectée</h1>
+                <h1>OOOOPSS 404! Une érreur a été détectée</h1>
             </div>
             <img src="{{ asset('bundles/family/images/down.png') }}" class="imgmenu" alt="404">
         </div>
