--- a/src/FamilyBundle/Resources/views/Default/calendar.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/calendar.html.twig
@@ -41,10 +41,10 @@
 					<div id="imgevent"></div>
 				</div>
 				<div class="modal-footer">
-					{% if is_granted("ROLE_SUPER_ADMIN") %}
+					{#{% if is_granted("ROLE_SUPER_ADMIN") %}#}
 						<a href="#" id="delete_event" class="btn btn-default">Supprimer</a>
 						<a href="#" id="edit_event" class="btn btn-primary">Modifier</a>
-					{% endif %}
+					{#{% endif %}#}
 				</div>
 			</div>
 		</div>
