--- a/src/FamilyBundle/Resources/views/Default/nav.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/nav.html.twig
@@ -23,7 +23,11 @@
                     <a href="{{ path('family_map') }}"><img src="{{ asset('bundles/family/images/map.png') }}" class="brand-logo nav_bar_logo" alt="map" title="Map"></a>
                 </div>
                 <div class="col s1">
-                    <a href="{{ path('fos_user_profile_show') }}"><img src="{{ asset('bundles/family/images/profile.png') }}" class="brand-logo nav_bar_logo" alt="Profile" title="profile"></a>
+                    <a href="{{ path('fos_user_profile_show') }}"><img class="brand-logo nav_bar_logo" alt="profile" title="Profile" src="{{ asset('bundles/family/images/profile.png') }}" onmouseover="this.src='{{ asset('bundles/family/images/p3.png') }}'" onmouseout="this.src='{{ asset('bundles/family/images/profile.png') }}'"></a>
+                </div>
+
+                <div class="col s1">
+                    <a href="{{ path('fos_user_security_logout') }}"><img src="{{ asset('bundles/family/images/logout.png') }}" class="brand-logo nav_bar_logo" alt="logout" title="Logout"></a>
                 </div>
 
                 {#<div class="col s1 ">#}
@@ -54,10 +58,12 @@
 
         <ul id="nav-mobile" class="side-nav center">
             <li><img src="{{ asset('bundles/family/images/family.png') }}" alt="logo"></li>
-            <li><a href="{{ path('family_phone') }}">Phone</a></li>
-            <li><a href="{{ path('family_calendar') }}">Calendar</a></li>
-            <li><a href="{{ path('family_time') }}">Timer</a></li>
-            <li><a href="{{ path('family_map') }}">Map</a></li>
+            <li><a href="{{ path('family_phone') }}" title="Phone">Phone</a></li>
+            <li><a href="{{ path('family_calendar') }}" title="Calendar">Calendar</a></li>
+            <li><a href="{{ path('family_time') }}" title="Timer">Timer</a></li>
+            <li><a href="{{ path('family_map') }}" title="Map">Map</a></li>
+            <li><a href="{{ path('fos_user_profile_show') }}" title="Profile">Profile</a></li>
+            <li><a href="{{ path('fos_user_security_logout') }}" title="Logout">Logout</a></li>
         </ul>
 
     </div>
